--- a/portafoli/portfolio.html
+++ b/portafoli/portfolio.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Ventaja - Portfolio</title>
+    <title>ventaja - Portfolio</title>
     <style>
         body {
             font-family: 'Times New Roman', Times, serif;
@@ -48,6 +48,7 @@
 
         nav a:hover {
             transform: scale(1.2);
+            color: #F24D6A;
         }
 
         .div1 {
@@ -132,6 +133,7 @@
         <a href="#sobre-mi">Sobre mí</a>
         <a href="#proyectos">Habilidades</a>
         <a href="#contacto">Contacto</a>
+        <a href="activitats.html">Actividades</a>
     </nav>
 
     <div class="div1">
@@ -173,7 +175,7 @@
     </div>
 
     <footer>
-        <p>&copy; 2025 Ventaja. Todos los derechos reservados.</p>
+        <p>&copy; 2025 ventaja. Todos los derechos reservados.</p>
     </footer>
 </body>
 </html>
