--- a/index.html
+++ b/index.html
@@ -133,7 +133,7 @@
         <a href="#sobre-mi">Sobre mí</a>
         <a href="#proyectos">Habilidades</a>
         <a href="#contacto">Contacto</a>
-        <a href="activitats.html">Actividades</a>
+        <a href="portafoli/activitats.html">Actividades</a>
     </nav>
 
     <div class="div1">
