--- a/activitats.html
+++ b/activitats.html
@@ -100,7 +100,7 @@
         <h1>Actividades HTML ; CSS</h1>
         <nav>
             <a href="activitats.html">Inicio</a>
-            <a href="portfolio.html">Portafolio</a>
+            <a href="index.html">Portafolio</a>
         </nav>
     </header>
     
