Correcio final CSS

--- a/activitats.html
+++ b/activitats.html
@@ -108,24 +108,24 @@
         <section>
             <h2>CSS</h2>
             <ul>
-                <li><a href="../activitats/css/3D/">3D</a></li>
-                <li><a href="../activitats/css/animation/">Animación</a></li>
-                <li><a href="../activitats/css/BEM/">BEM</a></li>
-                <li><a href="../activitats/css/border/">Bordes</a></li>
-                <li><a href="../activitats/css/color/">Colores</a></li>
-                <li><a href="../activitats/css/display/">Display</a></li>
-                <li><a href="../activitats/css/filters/">Filtros</a></li>
-                <li><a href="../activitats/css/imagenes/">Imágenes</a></li>
-                <li><a href="../activitats/css/listas/">Listas</a></li>
-                <li><a href="../activitats/css/margin/">Márgenes</a></li>
-                <li><a href="../activitats/css/medidas/">Medidas</a></li>
-                <li><a href="../activitats/css/overflow/">Overflow</a></li>
-                <li><a href="../activitats/css/padding/">Padding</a></li>
-                <li><a href="../activitats/css/selectores/">Selectores</a></li>
-                <li><a href="../activitats/css/textos/">Textos</a></li>
-                <li><a href="../activitats/css/transform/">Transformaciones</a></li>
-                <li><a href="../activitats/css/transition/">Transiciones</a></li>
-                <li><a href="../activitats/css/variables/">Variables</a></li>
+                <li><a href="activitats/css/3D/">3D</a></li>
+                <li><a href="activitats/css/animation/">Animación</a></li>
+                <li><a href="activitats/css/BEM/">BEM</a></li>
+                <li><a href="activitats/css/border/">Bordes</a></li>
+                <li><a href="activitats/css/color/">Colores</a></li>
+                <li><a href="activitats/css/display/">Display</a></li>
+                <li><a href="activitats/css/filters/">Filtros</a></li>
+                <li><a href="activitats/css/imagenes/">Imágenes</a></li>
+                <li><a href="activitats/css/listas/">Listas</a></li>
+                <li><a href="activitats/css/margin/">Márgenes</a></li>
+                <li><a href="activitats/css/medidas/">Medidas</a></li>
+                <li><a href="activitats/css/overflow/">Overflow</a></li>
+                <li><a href="activitats/css/padding/">Padding</a></li>
+                <li><a href="activitats/css/selectores/">Selectores</a></li>
+                <li><a href="activitats/css/textos/">Textos</a></li>
+                <li><a href="activitats/css/transform/">Transformaciones</a></li>
+                <li><a href="activitats/css/transition/">Transiciones</a></li>
+                <li><a href="activitats/css/variables/">Variables</a></li>
             
         </section>
         
