Correcio html final

--- a/activitats.html
+++ b/activitats.html
@@ -132,17 +132,17 @@
         <section>
             <h2>HTML</h2>
             <ul>
-                <li><a href="../activitats/html/Accesibilidad/">Accesibilidad</a></li>
-                <li><a href="../activitats/html/Contenido/">Contenido</a></li>
-                <li><a href="../activitats/html/Formato/">Formato</a></li>
-                <li><a href="../activitats/html/Formularios/">Formularios</a></li>
-                <li><a href="../activitats/html/Hipervinculos/">Hipervínculos</a></li>
-                <li><a href="../activitats/html/Imagenes/">Imágenes</a></li>
-                <li><a href="../activitats/html/Interactivos/">Interactivos</a></li>
-                <li><a href="../activitats/html/Listas/">Listas</a></li>
-                <li><a href="../activitats/html/Multimedia/">Multimedia</a></li>
-                <li><a href="../activitats/html/P1_reptes/">P1 Reptes</a></li>
-                <li><a href="../activitats/html/Tablas/">Tablas</a></li>
+                <li><a href="activitats/html/Accesibilidad/">Accesibilidad</a></li>
+                <li><a href="activitats/html/Contenido/">Contenido</a></li>
+                <li><a href="activitats/html/Formato/">Formato</a></li>
+                <li><a href="activitats/html/Formularios/">Formularios</a></li>
+                <li><a href="activitats/html/Hipervinculos/">Hipervínculos</a></li>
+                <li><a href="activitats/html/Imagenes/">Imágenes</a></li>
+                <li><a href="activitats/html/Interactivos/">Interactivos</a></li>
+                <li><a href="activitats/html/Listas/">Listas</a></li>
+                <li><a href="activitats/html/Multimedia/">Multimedia</a></li>
+                <li><a href="activitats/html/P1_reptes/">P1 Reptes</a></li>
+                <li><a href="activitats/html/Tablas/">Tablas</a></li>
             </ul>
         </section>
     </main>
